--- a/个人主页.html
+++ b/个人主页.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <title>风吟酱的个人主页</title>
   <style>
@@ -28,6 +29,7 @@
 <link rel="stylesheet" href="dist/css/full-roll.css">
 <link rel="stylesheet" href="dist/css/abcdefg.css">
 <link rel="stylesheet" href="dist/css/css.css">
+<link rel="stylesheet" href="dist/css/csstest.css">
 <nav class="nav" id="add">
   <div class="container">
     <div class="logo">
@@ -57,8 +59,8 @@
 
 <div style="overflow-y: scroll;height: 100vh;" id="roll">
 <div id="bg_can" style="  position: fixed;z-index: -1;top: 0;left: 0;"></div>
-<div style="height: 60px;"></div>
-<!-- 空的60px盒子，分隔用 -->
+<div class="partition"></div>
+<!-- 空的60px自适应盒子，分隔用 -->
 <div>
   <!-- just to make scrolling effect possible -->
   <h2 class="myH2">芝士什么?</h2>
@@ -76,8 +78,8 @@
     排版测试Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum ratione facere animi impedit rem labore sint repellendus ipsa sapiente voluptatem aut excepturi quo itaque, ab earum cumque. Voluptatem beatae id inventore quod voluptate qui deserunt, quis placeat, tempora ex totam, dolore sequi harum eos voluptatibus animi labore officiis minus laboriosam
     </p>
 
-    <div style="height: 60px;"></div>
-    <!-- 空的60px盒子，分隔用 -->
+    <div class="partition"></div>
+    <!-- 空的60px自适应盒子，分隔用 -->
     <h2 class="myH2">不知道芝士什么</h2>
   <div class="box-container">
     <div class="box box1">
@@ -95,8 +97,8 @@
   </div>
 
 
-  <div style="height: 60px;"></div>
-  <!-- 空的60px盒子，分隔用 -->
+  <div class="partition"></div>
+  <!-- 空的60px自适应盒子，分隔用 -->
 
 
     <div class="image" style="width: 100%; height: 380px;display: flex;">
@@ -118,8 +120,8 @@
     <!-- 下面这行是空白占位看滚动效果用的 -->
     <!-- <div style="height:600px;width:100%;"></div> -->
 
-    <div style="height: 60px;"></div>
-    <!-- 空的60px盒子，分隔用 -->
+    <div class="partition"></div>
+    <!-- 空的60px自适应盒子，分隔用 -->
 
     <div style="display: flex; justify-content: center; align-items: center;">
       <!-- <iframe src="http://localhost:3000/typecho/?list" style="width: 60%;height: 1000px;border:none;width:620px;" ></iframe> -->
